# mopidy-qobuz

./: .gitignore  README.rst  setup.cfg
mopidy_qobuz/: __init__.py  backend.py  browse.py  ext.conf  library.py  playback.py  playlists.py  translators.py
mopidy_qobuz/client/: __init__.py
tests/: conftest.py  test_backend.py  test_browse.py  test_client.py  test_extension.py
tests/data/: library.yml
