[metadata]
name = Mopidy-Qobuz-Hires
version = 0.1.0
url = https://github.com/vitiko98/mopidy-qobuz
author = Vitiko
author_email = vhnz98@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for playing Hi-Res/Lossless music from Qobuz
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    setuptools
    requests
    pyyaml

[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    isort
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(test)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    qobuz = mopidy_qobuz:Extension


[isort]
profile= google


[flake8]
application-import-names = mopidy_qobuz, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    C, E, F, W
    B
    B950
    I
    N
ignore =
    E203
    E501
    W503
    B305
